--- a/main.ui
+++ b/main.ui
@@ -18,6 +18,13 @@
     <item>
      <widget class="QTableWidget" name="tableWidget"/>
     </item>
+    <item>
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Add/Edit Coffee</string>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="QMenuBar" name="menubar">
