--- a/addEditCoffeeForm.ui
+++ b/addEditCoffeeForm.ui
@@ -13,79 +13,83 @@
   <property name="windowTitle">
    <string>Add/Edit Coffee</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
-    <widget class="QFormLayout" name="formLayout">
-     <item row="0" column="0">
-      <widget class="QLabel" name="labelName">
-       <property name="text">
-        <string>Name</string>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <widget class="QLineEdit" name="lineEditName"/>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="labelRoast">
-       <property name="text">
-        <string>Roast Level</string>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="1">
-      <widget class="QLineEdit" name="lineEditRoast"/>
-     </item>
-     <item row="2" column="0">
-      <widget class="QLabel" name="labelGround">
-       <property name="text">
-        <string>Ground</string>
-       </property>
-      </widget>
-     </item>
-     <item row="2" column="1">
-      <widget class="QLineEdit" name="lineEditGround"/>
-     </item>
-     <item row="3" column="0">
-      <widget class="QLabel" name="labelTaste">
-       <property name="text">
-        <string>Taste Description</string>
-       </property>
-      </widget>
-     </item>
-     <item row="3" column="1">
-      <widget class="QLineEdit" name="lineEditTaste"/>
-     </item>
-     <item row="4" column="0">
-      <widget class="QLabel" name="labelPrice">
-       <property name="text">
-        <string>Price</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="1">
-      <widget class="QLineEdit" name="lineEditPrice"/>
-     </item>
-     <item row="5" column="0">
-      <widget class="QLabel" name="labelVolume">
-       <property name="text">
-        <string>Volume</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
-      <widget class="QLineEdit" name="lineEditVolume"/>
-     </item>
-    </widget>
-   </item>
-   <item>
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>Save</string>
-     </property>
-    </widget>
-   </item>
-  </layout>
+  <widget class="QWidget" name="formContainer">
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QWidget" name="formWidget">
+      <layout class="QFormLayout" name="formLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="labelName">
+         <property name="text">
+          <string>Name</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QLineEdit" name="lineEditName"/>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="labelRoast">
+         <property name="text">
+          <string>Roast Level</string>
+         </property>
+        </widget>
+       </item>
+       <item row="1" column="1">
+        <widget class="QLineEdit" name="lineEditRoast"/>
+       </item>
+       <item row="2" column="0">
+        <widget class="QLabel" name="labelGround">
+         <property name="text">
+          <string>Ground</string>
+         </property>
+        </widget>
+       </item>
+       <item row="2" column="1">
+        <widget class="QLineEdit" name="lineEditGround"/>
+       </item>
+       <item row="3" column="0">
+        <widget class="QLabel" name="labelTaste">
+         <property name="text">
+          <string>Taste Description</string>
+         </property>
+        </widget>
+       </item>
+       <item row="3" column="1">
+        <widget class="QLineEdit" name="lineEditTaste"/>
+       </item>
+       <item row="4" column="0">
+        <widget class="QLabel" name="labelPrice">
+         <property name="text">
+          <string>Price</string>
+         </property>
+        </widget>
+       </item>
+       <item row="4" column="1">
+        <widget class="QLineEdit" name="lineEditPrice"/>
+       </item>
+       <item row="5" column="0">
+        <widget class="QLabel" name="labelVolume">
+         <property name="text">
+          <string>Volume</string>
+         </property>
+        </widget>
+       </item>
+       <item row="5" column="1">
+        <widget class="QLineEdit" name="lineEditVolume"/>
+       </item>
+      </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Save</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
  </widget>
  <resources/>
  <connections/>
